# cis194-spring13

./: LICENSE  cis194-spring13.cabal  upenn-cis194-spring13.cabal
src/HW01/: HW01.hs  HW01Tests.hs
src/HW02/: HW02Tests.hs  Log.hs  LogAnalysis.hs
src/HW03/: Golf.hs  HW03Tests.hs
src/HW04/: HW04.hs  HW04Tests.hs
src/HW05/: Calc.hs  HW05Tests.hs
src/HW06/: HW06.hs  HW06Tests.hs
src/HW07/: Editor.hs  HW07Tests.hs  JoinList.hs  JoinListBufEditor.hs  Scrabble.hs  StringBufEditor.hs
src/HW08/: Employee.hs  HW08Tests.hs  Party.hs
src/HW10/: AParser.hs
src/HW11/: SExpr.hs
src/HW12/: Risk.hs
